# blux-reg

./: COMMERCIAL.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  ROLE.md  plan.md  pyproject.toml  requirements.txt  snapshot.md
.github/workflows/: ci.yml
blux_reg/: __init__.py  cli.py  crypto.py  doctor.py  keystore.py  ledger.py  paths.py  registry.py  tokens.py
docs/: CONTRACT.md  roles.md
schemas/: capability_manifest.schema.json  capability_token.schema.json  revocation.schema.json
scripts/: demo_unified_reg.sh  physics_check.sh
src/blux_reg/: __init__.py  api.py  cli.py  config.py  crypto.py  ledger.py  manifest.py  tokens.py  trust_store.py  util.py
tests/: conftest.py  test_boundary_ci.py  test_crypto.py  test_demo.py  test_flow.py  test_ledger.py  test_tokens.py  test_trust_store.py
